# dj-saas

./: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/components/alert/: alert.html  alert.py
app/components/drawer/: drawer.html  drawer.py
app/components/draweritem/: draweritem.html  draweritem.py
app/components/input/: input.html  input.py
app/config/: settings.py  urls.py
app/core/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
app/core/migrations/: 0001_initial.py  0002_user_customer.py
app/core/templatetags/: currency_symbol.py
app/templates/: base.html  cancel.html  checkout.html  index.html  plans.html  success.html
app/templates/account/: email_confirm.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
app/templates/app/: dashboard.html  profile.html
app/tests/: test_user.py
app/theme/static_src/: package-lock.json  package.json  tailwind.config.js
app/theme/static_src/src/: styles.css
