[tool.poetry]
authors = ["Fernando Rodrigues <devfernandorodrigues@gmail.com>"]
description = ""
name = "project"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
