[tool.poetry]
authors = ["Fernando Rodrigues <devfernandorodrigues@gmail.com>"]
description = ""
name = "project"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
dj-database-url = "^2.0.0"
dj-stripe = "^2.8.1"
django = "^4.2.4"
django-tailwind = {extras = ["reload"], version = "^3.6.0"}
psycopg2-binary = "2.9.3"
python = "^3.11"
python-decouple = "^3.8"
django-allauth = "^0.54.0"
django-jazzmin = "^2.6.0"
django-htmx = "^1.16.0"
django-components = "^0.28.1"
babel = "^2.12.1"
ipython = "^8.14.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
ruff = "^0.0.282"
taskipy = "^1.12.0"

[tool.ruff]
exclude = ["migrations"]
line-length = 79

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"

[tool.taskipy.tasks]
format = "black . && isort ."
lint = "ruff . && black --check . && isort ."
post_test = "coverage html"
run = "python manage.py runserver 0.0.0.0:8000"
tailwind_install = "python manage.py tailwind install"
tailwind_start = "python manage.py tailwind start"
test = "pytest -s -x --cov=. -vv"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
